# algomatic-state

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WIREFRAME_SPEC.md  alembic.ini  docker-compose.agents.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_pytest_programmatically.py  start-agents.sh
.claude/skills/: CODING.md
.planning/: .continue-here.md  PROJECT.md  config.json
agent-service/: Dockerfile  go.mod
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_computed_features.py  003_remove_vwap.py  004_consolidate_states_to_features.py  005_trading_buddy_tables.py  006_broker_integration_tables.py  007_auth_and_user_profiles.py  008_trade_lifecycle_schema.py  009_position_campaigns.py  010_strategies_first_class.py  011_settings_journal_schema.py  011_user_profiles_jsonb.py  012_strategy_risk_profiles.py  013_settings_journal_schema.py  014_site_preferences.py  015_strategy_probe_tables.py  016_strategy_probe_trades.py  017_add_trade_pnl_metrics.py  018_fix_open_day_to_date.py  019_campaign_checks.py  020_add_strategy_versioning.py  021_add_probe_results_open_day_index.py  022_campaign_leg_orphan_support.py  023_drop_campaign_strategy_id.py  024_rename_block_to_critical.py  025_remove_danger_severity.py  026_restructure_trade_lifecycle.py  027_drop_campaigns_table.py  028_campaign_checks_require_context.py  028_waitlist_table.py  029_add_strategy_implied_family.py  030_waitlist_table.py  031_seed_app_user_and_strategies.py  032_add_decision_context_inferred_context.py  033_add_user_profiles_stats.py  034_add_campaign_checks_check_name.py  035_add_campaign_checks_dedup_index.py  036_trading_agents.py  037_add_trade_tags.py  038_unify_strategies.py  (+10 more)
config/: __init__.py  assets.yaml  features.json  settings.py  state_vector_feature_spec.yaml  trading.yaml
config/seed/: commodity_tickers.csv  fx_tickers.csv  us_tickers.csv
data-service/: Dockerfile  go.mod  go.sum
docs/: APIs.md  ARCHITECTURE.md  DATABASE.md  FEATURE.md  MULTI_TIMEFRAME_STATE_VECTORS_HMM_REGIME_TRACKING.md  PITFALLS.md  PRD.md  README.md  REQUIREMENTS.md  SNAPTRADE.md  STATE_VECTOR_HMM_IMPLEMENTATION_PLAN.md  STORIES.md  STRATEGIES_REPO.md  TRADE_CHECKS_REFERENCE.md  Trading_Buddy_Detailed_TODOs.md  Trading_Buddy_Master_Roadmap_and_DB_Schema.txt  UI.md  UI_REQUIREMENTS.md  checks_reference.md  position_campaigns_ui_schema_plan.md  strategy_service_design.md  trading_mentor_platform_high_level_project_plan.md  tradingbuddy_sitemap_nextjs_plan.md
docs/archive/: STATE_VECTOR_HMM_IMPLEMENTATION_PLAN.md  Trading_Buddy_Detailed_TODOs.md  Trading_Buddy_Master_Roadmap_and_DB_Schema.md  tradingbuddy_trade_schema.md
go-strats/: go.mod  go.sum
indicator-engine/: CMakeLists.txt  Dockerfile  config.json.example
indicator-engine/src/: config.cpp  config.h  data_service_client.cpp  data_service_client.h  db.cpp  db.h  json_builder.cpp  json_builder.h  main.cpp  pipeline.cpp  pipeline.h  redis_bus.cpp  redis_bus.h  service.cpp  service.h
indicator-engine/src/indicators/: anchor.cpp  anchor.h  base.h  intrabar.cpp  intrabar.h  returns.cpp  returns.h  talib_wrapper.cpp  talib_wrapper.h  time_of_day.cpp  time_of_day.h  volatility.cpp  volatility.h  volume.cpp  volume.h
indicator-engine/tests/: test_indicators.cpp  test_pipeline.cpp
marketdata-service/: Dockerfile  config.json.example  go.mod  go.sum
proposed-ui/: README.md  index.html  package.json
proposed-ui/src/: main.tsx  styles.css
proto/: Makefile  buf.gen.yaml  buf.yaml
scripts/: aggregate_timeframes.py  analyze_hmm_states.py  compute_baseline.py  compute_features.py  download_data.py  download_tickers.py  import_csv_to_db.py  init_db.py  review_legs.py  run_backtest.py  run_checks.py  run_checks_on_legs.py  run_live_trading.py  run_new_checks_on_legs.py  run_paper_trading.py  start_agent.sh  stop_agent.sh  train_autoencoder.py  train_hmm.py
scripts/helpers/: __init__.py  data.py  logging_setup.py  output.py  state_models.py  strategy_factory.py
src/: __init__.py  context.py  domain.py  guardrails.py  orchestrator.py  repository.py  trading_buddy_api.py
src/agent/: api.py  breakout_config.py  breakout_main.py  breakout_strategy.py  config.py  contrarian_config.py  contrarian_main.py  contrarian_strategy.py  main.py  scheduler.py  strategy.py  vwap_config.py  vwap_main.py  vwap_strategy.py
src/api/: __init__.py  _data_helpers.py  alpaca.py  analysis.py  auth.py  auth_middleware.py  broker.py  campaigns.py  data_sync.py  features_api.py  internal.py  journal.py  market_data.py  market_data_api.py  ohlcv.py  regimes.py  strategies.py  strategy_probe.py  trading_agents.py  trading_buddy.py  user_profile.py  waitlist.py
src/backtest/: __init__.py  engine.py  metrics.py  report.py  walk_forward.py
src/checks/: __init__.py  base.py  risk_sanity.py  runner.py
src/data/: __init__.py  cache.py  grpc_client.py  quality.py  schemas.py  timeframe_aggregator.py
src/evaluators/: __init__.py  base.py  context.py  evidence.py  exit_plan.py  mtfa.py  regime_fit.py  registry.py  risk_reward.py  stop_placement.py  structure_awareness.py  volatility_liquidity.py
src/execution/: __init__.py  client.py  order_manager.py  order_tracker.py  orders.py  risk_manager.py  runner.py  snaptrade_client.py
src/features/: __init__.py  anchor.py  base.py  intrabar.py  market_context.py  pandas_ta_indicators.py  pipeline.py  registry.py  returns.py  talib_indicators.py  time_of_day.py  volatility.py  volume.py
src/hmm/: __init__.py  artifacts.py  config.py  contracts.py  data_pipeline.py  hmm_model.py  inference.py  labeling.py  monitoring.py  scalers.py  storage.py  training.py  validation.py
src/marketdata/: __init__.py  alpaca_provider.py  base.py  finnhub_provider.py  orchestrator.py  service.py  utils.py
src/messaging/: __init__.py  base.py  bus.py  events.py  redis_bus.py  serialization.py
src/pca_states/: __init__.py
src/reviewer/: __init__.py  api_client.py  baseline.py  evaluator_runner.py  main.py  publisher.py  (+1 more)
tests/: conftest.py
ui/: __init__.py  run_backend.py  start_ui.bat  start_ui.sh
(+568 files in other folders)
