[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algomatic-state"
version = "0.1.0"
description = "Algorithmic trading with state representation"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py",
    "pandas>=2.0.0",
    "pandera>=0.18.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
